<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="newChannelViewModel"
            type="com.example.telegacom.NewChannelFormViewModel"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_normal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/label_channelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/channel_name" />

            <EditText
                android:id="@+id/channel_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_channelName" />

            <TextView
                android:id="@+id/label_manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/channel_name"
                android:text="@string/manager_link" />

            <EditText
                android:id="@+id/manager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_manager" />

            <TextView
                android:id="@+id/label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/manager"
                android:text="@string/channel_description" />

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_description" />

            <TextView
                android:id="@+id/label_amountSubscribers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description"
                android:text="@string/subscribers_amount" />

            <EditText
                android:id="@+id/amountSubscribers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_amountSubscribers"
                android:inputType="number" />

            <TextView
                android:id="@+id/label_channelLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/amountSubscribers"
                android:text="@string/channel_link" />

            <EditText
                android:id="@+id/channelLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_channelLink" />

            <TextView
                android:id="@+id/label_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/channelLink"
                android:text="@string/price" />

            <EditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_price"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/label_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/price"
                android:text="@string/currency" />

            <RadioGroup
                android:id="@+id/radio_currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_currency"
                android:layout_marginTop="@dimen/spacing_normal"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_dollar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/USD" />

                <RadioButton
                    android:id="@+id/rb_rub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/RUB" />

                <RadioButton
                    android:id="@+id/rb_uah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="@string/UAH" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_below="@id/radio_currency">
            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/mybutton"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:layout_marginTop="@dimen/spacing_normal"
                android:textStyle="bold" />

            <Button
                android:id="@+id/save_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:background="@drawable/mybutton"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:layout_marginTop="@dimen/spacing_normal"
                android:textStyle="bold"/>

            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</layout>