<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_normal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="italic"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="@dimen/spacing_normal"
            android:id="@+id/fragment_time"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/using_rules"
            android:textStyle="bold"
            android:textSize="26sp"
            android:gravity="center_horizontal"
            />
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:src="@drawable/telegacom"
            android:contentDescription="@string/logo_description" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_rules"
            android:textSize="17sp" />
    </LinearLayout>
</ScrollView>